<resources>
    <string name="app_name">Spotify Streamer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_top_tracks">Top 10 Tracks</string>
    <string name="title_activity_media_player">Now Playing</string>

    <string name="hint_search_for_artist">Search for Artist</string>
    <string name="search_result_no_artists_found">No artists found.</string>

    <string name="artistNamePlaceholder">Artist Name</string>
    <string name="albumNamePlaceholder">Album Name</string>
    <string name="trackNamePlaceholder">Track Name</string>
    <string name="currentTimePlaceholder">00:00</string>
    <string name="totalTimePlaceholder">00:30</string>

    <string name="contentDescriptionAlbumCover">Album Cover</string>
    <string name="contentDescriptionPrevious">Previous Track</string>
    <string name="contentDescriptionNext">Next Track</string>
    <string name="contentDescriptionPlay">Play</string>
    <string name="contentDescriptionPause">Pause</string>
</resources>
