<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:padding="@dimen/media_player_padding">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:text="@string/artistNamePlaceholder"/>
        <TextView
            android:id="@+id/albumName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/albumNamePlaceholder"/>
        <ImageView
            android:id="@+id/albumCover"
            android:layout_width="@dimen/large_album_cover_size"
            android:layout_height="@dimen/large_album_cover_size"
            android:background="@color/thumbnail_placeholder_color"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/contentDescriptionAlbumCover"/>
    </LinearLayout>


    <TextView
        android:id="@+id/trackName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trackNamePlaceholder"
        android:gravity="center"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:id="@+id/currentTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/currentTimePlaceholder"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/totalTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/totalTimePlaceholder"
            android:gravity="right"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageButton
            android:id="@+id/prevBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescriptionPrevious"
            android:src="@android:drawable/ic_media_previous"/>
        <ImageButton
            android:id="@+id/playBtn"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescriptionPlay"
            android:src="@android:drawable/ic_media_play"/>
        <ImageButton
            android:id="@+id/pauseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescriptionPause"
            android:src="@android:drawable/ic_media_pause"/>
        <ImageButton
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescriptionNext"
            android:src="@android:drawable/ic_media_next"/>
    </LinearLayout>

</LinearLayout>